added tailwind and air

--- a/view/layout/base.templ
+++ b/view/layout/base.templ
@@ -4,9 +4,9 @@ templ Base() {
 	<html>
 		<head>
 			<title>My Site</title>
+			<link href="./static/output.css" rel="stylesheet"/>
 		</head>
-		<body>
-			Ths is the base template
+		<body class="antialiased text-slate-400 bg-slate-900">
 			{ children... }
 		</body>
 	</html>
