--- a/view/user/show.templ
+++ b/view/user/show.templ
@@ -6,11 +6,104 @@ import (
 	"github.com/anomaly44/go-tmpl/view/component"
 )
 
+script addtocomp() {
+	const ctx = document.getElementById("mychart");
+	function generateDataPoints(sliderValue) {
+	var data = [
+		{
+		label: "scenario 1",
+		function: function (x) {
+			return x + sliderValue;
+		},
+		borderColor: "rgba(75, 192, 192, 1)",
+		data: [],
+		fill: false,
+		},
+		{
+		label: "scenario 2",
+		function: function (x) {
+			return (x) * (x + 2* sliderValue);
+		},
+		borderColor: "rgba(153, 102, 255, 1)",
+		data: [],
+		fill: false,
+		},
+		{
+		label: "scenario 3",
+		function: function (x) {
+			return (x) * (x + 3* sliderValue);;
+		},
+		borderColor: "rgba(255, 206, 86, 1)",
+		data: [],
+		fill: false,
+		},
+	];
+	return data;
+	}
+
+	window.generateDataPoints = generateDataPoints;
+	var data = {
+	labels: [1, 2, 3, 4, 5],
+	datasets: generateDataPoints(0.5),
+	};
+
+	function generateLines(chart) {
+	var data = chart.config.data;
+	for (var i = 0; i < data.datasets.length; i++) {
+		for (var j = 0; j < data.labels.length; j++) {
+		var fct = data.datasets[i].function,
+			x = data.labels[j],
+			y = fct(x);
+		data.datasets[i].data.push(y);
+		}
+	}
+	}
+
+	const myMathChart = new Chart(ctx, {
+	plugins: [
+		{
+		beforeInit: generateLines,
+		beforeUpdate: generateLines,
+		},
+	],
+	type: "line",
+	data,
+	options: {
+		// scales: {
+		// yAxes: [
+		// 	{
+		// 	ticks: {
+		// 		beginAtZero: true,
+		// 	},
+		// 	},
+		// ],
+		// },
+	},
+	});
+	window.myMathChart = myMathChart;
+}
+
 templ Show(user model.User) {
 	@layout.Base() {
-		<h1>hello from the user page { user.Email }</h1>
-		@component.Input(component.InputProps{
-			Name: "email",
-			Typ:  "email"})
+		<div>
+			<div id="main" class="max-w-6xl mx-auto px-4 sm:px-6 md:px-8">
+				<h1 class="mb-8 mt-8 text-3xl font-extrabold leading-none tracking-tight text-white text-center">Welcome to the demo { user.Email }</h1>
+				<div class="flex flex-wrap justify-center">
+					<div class="w-full md:w-1/3 max-h-[500px] p-3">
+						@component.Slider(component.SliderProps{
+							Id:    "acid",
+							Min:   "0",
+							Max:   "2",
+							Value: "0.5",
+							Label: "Acetic acid",
+						})
+					</div>
+					<div class="w-full md:w-2/3 max-w-4xl h-[400px] max-h-[500px] flex justify-center items-center">
+						<canvas id="mychart" class="w-full h-full"></canvas>
+					</div>
+				</div>
+			</div>
+		</div>
+		@addtocomp()
 	}
 }
