--- a/view/layout/base.templ
+++ b/view/layout/base.templ
@@ -4,9 +4,10 @@ templ Base() {
 	<html>
 		<head>
 			<title>My Site</title>
-			<link href="./static/styles.css" rel="stylesheet"/>
-			<script src="./static/script.js"></script>
+			<link href="/static/styles.css" rel="stylesheet"/>
+			<script src="/static/script.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js" integrity="sha512-ZwR1/gSZM3ai6vCdI+LVF1zSq/5HznD3ZSTk7kajkaj4D292NLuduDCO1c/NT8Id+jE58KYLKT7hXnbtryGmMg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+			<script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
 		</head>
 		<body class="antialiased text-slate-400 bg-slate-900">
 			{ children... }
