--- a/static/input.css
+++ b/static/input.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.htmx-indicator {
+    opacity:0;
+    transition: opacity 500ms ease-in;
+} 
+.htmx-request.htmx-indicator{
+    opacity:1
+}
