--- a/view/layout/base.templ
+++ b/view/layout/base.templ
@@ -3,7 +3,7 @@ package layout
 templ Base() {
 	<html>
 		<head>
-			<title>My Site</title>
+			<title>GO HTMX POC</title>
 			<link href="/static/styles.css" rel="stylesheet"/>
 			<script src="/static/script.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js" integrity="sha512-ZwR1/gSZM3ai6vCdI+LVF1zSq/5HznD3ZSTk7kajkaj4D292NLuduDCO1c/NT8Id+jE58KYLKT7hXnbtryGmMg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
