--- a/view/recipe/recipe.templ
+++ b/view/recipe/recipe.templ
@@ -8,7 +8,7 @@ import (
 )
 
 templ Recipe(recipe model.Recipe) {
-	<div class="recipe htmx-swapping:opacity-0 transition-opacity duration-2000 bg-slate-800 p-4 rounded-lg shadow-lg mb-4 relative">
+	<div class="recipe htmx-swapping:opacity-0 transition-opacity duration-500 bg-slate-800 p-4 rounded-lg shadow-lg mb-4 relative">
 		<div class="absolute top-0 right-0 p-2 z-10">
 			<button type="button" class="text-gray-400 hover:text-gray-200" hx-indicator={ fmt.Sprintf("#delete-indicator-%s", recipe.Id) } hx-delete={ "/users/recipes/" + recipe.Id } hx-swap="outerHTML swap:1000ms" hx-target="closest .recipe">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -62,14 +62,14 @@ templ RecipeForm(data model.FormData) {
 					}
 				</div>
 				<div class="flex flex-col mb-4">
-					<label class="mb-2 font-bold text-lg" for="id">id</label>
+					<label class="mb-2 font-bold text-lg" for="id">Id</label>
 					<input
 						class="form-input mt-1 block w-full border-gray-300 shadow-sm rounded-md"
 						type="id"
 						if data.Values["id"] != "" {
 							value={ data.Values["id"] }
 						}
-						name="Id"
+						name="id"
 						placeholder="Id"
 					/>
 					if data.Errors["id"] != "" {
