--- a/view/user/login.templ
+++ b/view/user/login.templ
@@ -30,7 +30,7 @@ templ Login(data model.LoginFormData) {
 				</div>
 				<div class="flex items-center justify-between">
 					<button
-						class="bg-purple-800 hover:bg-purple-900 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+						class="bg-blue-800 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
 						type="submit"
 					>
 						Login
